--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,25 @@
 <resources>
-    <string name="app_name">MyHope</string>
+
+    <string name="app_name">Calculator </string>
+    <string name="_1">1</string>
+    <string name="_2">2</string>
+    <string name="_3">3</string>
+    <string name="_4">4</string>
+    <string name="_5">5</string>
+    <string name="_6">6</string>
+    <string name="_7">7</string>
+    <string name="_8">8</string>
+    <string name="_9">9</string>
+    <string name="_0">0</string>
+    <string name="_point">.</string>
+    <string name="_equally">=</string>
+    <string name="_clear">CA</string>
+    <string name="_clearLast">C</string>
+    <string name="_persents"> % </string>
+    <string name="_minus"> - </string>
+    <string name="_sum"> + </string>
+    <string name="_div"> / </string>
+    <string name="_multy"> * </string>
+    <string name="_brackets"> ( ) </string>
+    <string name="_textNumber">123456789,0</string>
 </resources>
